sample-apps/infinite-mario/manifests/15_route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: infinite-mario
  # namespace: infinite-mario
spec:
  to:
    kind: Service
    name: infinite-mario
    weight: 100
  port:
    targetPort: "8080-tcp"
  tls:
    termination: edge
  wildcardPolicy: None
